--- a/WarrantyTracking.Business/WarrantyTracking.Business.csproj
+++ b/WarrantyTracking.Business/WarrantyTracking.Business.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
+      <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
+      <PackageReference Include="MongoDB.Driver.Core" Version="2.10.3" />
+    </ItemGroup>
+
 </Project>
