--- a/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
+++ b/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
@@ -5,9 +5,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
       <PackageReference Include="MongoDB.Driver.Core" Version="2.10.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Abstract" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WarrantyTracking.Entities\WarrantyTracking.Entities.csproj" />
     </ItemGroup>
 
 </Project>
