--- a/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
+++ b/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WarrantyTracking.Core\WarrantyTracking.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
+    </ItemGroup>
+
 </Project>
