--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb+srv://warrantytracking_user:Sy141188.@warrantytrackingcluster-y6nii.mongodb.net",
+    "DatabaseName": "WarrantyTracking"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
