Added Autofac, ResultManagement, Warranty Controller and Minor Fixes

--- a/WarrantyTracking.Business/WarrantyTracking.Business.csproj
+++ b/WarrantyTracking.Business/WarrantyTracking.Business.csproj
@@ -5,8 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="5.2.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WarrantyTracking.DataAccess\WarrantyTracking.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
