--- a/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
+++ b/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
     <ItemGroup>
