--- a/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
+++ b/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
 </Project>
