Some Fixes, Added GetByLicensePlate Method Case Insensitive

--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://warrantytracking_user:Sy141188.@warrantytrackingcluster-y6nii.mongodb.net",
+    "ConnectionString": "mongodb+srv://warrantytracking_user:141188@warrantytrackingcluster-y6nii.mongodb.net",
     "DatabaseName": "WarrantyTracking"
   },
   "Logging": {
