--- a/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
+++ b/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
@@ -14,4 +14,12 @@
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
