Update EntityFramework and MongoDB Versions

--- a/WarrantyTracking.DesktopApp/WarrantyTracking.DesktopApp.csproj
+++ b/WarrantyTracking.DesktopApp/WarrantyTracking.DesktopApp.csproj
@@ -7,13 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MetroModernUI" Version="1.4.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="3.2.0-ci1773" />
   </ItemGroup>
 
 </Project>
