--- a/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
+++ b/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
@@ -5,11 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
-      <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
-      <PackageReference Include="MongoDB.Driver" Version="2.10.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+      <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
+      <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
