--- a/WarrantyTracking.DesktopApp/App.config
+++ b/WarrantyTracking.DesktopApp/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WarrantyTracking.DesktopApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <WarrantyTracking.DesktopApp.Properties.Settings>
+            <setting name="LastLoggedUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastLoggedPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ShowReleaseNotes" serializeAs="String">
+                <value>true</value>
+            </setting>
+        </WarrantyTracking.DesktopApp.Properties.Settings>
+    </userSettings>
 </configuration>
