--- a/WarrantyTracking.Core/WarrantyTracking.Core.csproj
+++ b/WarrantyTracking.Core/WarrantyTracking.Core.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
