--- a/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
+++ b/WarrantyTracking.DataAccess/WarrantyTracking.DataAccess.csproj
@@ -11,6 +11,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
