--- a/WarrantyTracking.Business/WarrantyTracking.Business.csproj
+++ b/WarrantyTracking.Business/WarrantyTracking.Business.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.2.0" />
+      <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
