--- a/WarrantyTracking.Core/WarrantyTracking.Core.csproj
+++ b/WarrantyTracking.Core/WarrantyTracking.Core.csproj
@@ -5,15 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+      <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
       <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Utilities\NewFolder\" />
     </ItemGroup>
 
 </Project>
