--- a/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
+++ b/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
