--- a/WarrantyTracking.Core/WarrantyTracking.Core.csproj
+++ b/WarrantyTracking.Core/WarrantyTracking.Core.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
       <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
+      <PackageReference Include="log4net" Version="2.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="MongoDB.Bson" Version="2.10.4" />
