--- a/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
+++ b/WarrantyTracking.WebAPI/WarrantyTracking.WebAPI.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+      <PackageReference Include="MicroKnights.Log4NetAdoNetAppender" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -18,6 +19,11 @@
 
     <ItemGroup>
       <Content Update="appsettings.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+      <Content Update="log4net.config">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
