Added CacheSerializer and Minor Fixes

--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -10,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RedisHostInformation": "164.90.190.170:8080"
 }
