Added UserDal, UserService, UserController and Some Improvement For RedisSettings and MongoDbSettings

--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -3,6 +3,10 @@
     "ConnectionString": "mongodb+srv://warrantytracking_user:sezer123@warrantytrackingcluster-y6nii.mongodb.net",
     "DatabaseName": "WarrantyTracking"
   },
+  "RedisSettings": {
+    "RedisHostIP": "164.90.190.170",
+    "RedisPort": "8080"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,6 +14,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "RedisHostInformation": "164.90.190.170:8080"
+  "AllowedHosts": "*"
 }
