--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -4,8 +4,11 @@
     "DatabaseName": "WarrantyTracking"
   },
   "RedisSettings": {
-    "RedisHostIP": "164.90.190.170",
-    "RedisPort": "8080"
+    "RedisHostIP": "185.162.146.207",
+    "RedisPort": "8000"
+  },
+  "MSSQLDbSettings": {
+    "ConnectionString": "server=78.142.208.131\\MSSQLSERVER2016;Initial Catalog=warrantytracking_db;User ID=warrantytracking_user;Password=sezer123"
   },
   "Logging": {
     "LogLevel": {
