--- a/WarrantyTracking.WebAPI/appsettings.json
+++ b/WarrantyTracking.WebAPI/appsettings.json
@@ -10,6 +10,7 @@
   "MSSQLDbSettings": {
     "ConnectionString": "server=78.142.208.131\\MSSQLSERVER2016;Initial Catalog=warrantytracking_db;User ID=warrantytracking_user;Password=sezer123"
   },
+  "log4netMongoConnection": "mongodb+srv://warrantytracking_user:sezer123@warrantytrackingcluster-y6nii.mongodb.net/WarrantyTracking",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
