--- a/WarrantyTracking.WebAPI/log4net-example.config
+++ b/WarrantyTracking.WebAPI/log4net-example.config
@@ -9,7 +9,7 @@
   <appender name="MongoDBAppender" type="Log4Mongo.MongoDBAppender, Log4Mongo">
     <!--<connectionStringFile value="connectionString.config" />
     <connectionStringName value="log4netMongoConnection" />-->
-    <connectionString value="mongodb+srv://warrantytracking_user:sezer123@warrantytrackingcluster-y6nii.mongodb.net/WarrantyTracking" />
+    <connectionString value="connectionstring url mongo" />
     <collectionName value="Logs" />
     <field>
       <name value="Detail" />
@@ -28,7 +28,7 @@
   <!--<appender name="SqlServerAppender" type="MicroKnights.Logging.AdoNetAppender, MicroKnights.Log4NetAdoNetAppender">
     <bufferSize value="1" />
     <connectionType value="System.Data.SqlClient.SqlConnection, System.Data"/>
-    <connectionString value="Server=185.162.146.207;Database=warrantytracking_db;User Id=sa;Password=Sy123456789" />
+    <connectionString value="connectionstring url sql" />
     <commandText value="INSERT INTO Logs ([Detail],[Date],[Audit]) VALUES (@logDetail,@log_date,@audit)" />
 
     <parameter>
